# biblioteka_numeryczna

./: CMakeLists.txt  LICENSE  README.md
examples/: example_approximation.cpp  example_integration.cpp  example_interpolation.cpp  example_linear_algebra.cpp  example_ode.cpp  example_root_finding.cpp
include/: approximation.h  differential_equations.h  integration.h  interpolation.h  linear_algebra.h  nonlinear_equations.h
src/: approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_algebra.cpp  nonlinear_equations.cpp
tests/: test_approximation.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_algebra.cpp  test_ode.cpp  test_root_finding.cpp
